--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
                 <h1>PAC MAN</h1>
                 <p>Describtion</p>
                 <div class="btn1">
-                    <a href=""><i class="fas fa-play" style="color:#F9EBC2;"></i> Play Now</a>
+                    <a href=""><i class="fas fa-play"></i> Play Now</a>
                 </div>
             </div>
         </div>
