--- a/floppy-bird/index_fpb.html
+++ b/floppy-bird/index_fpb.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floppy Bird</title>
     <link rel="stylesheet" href="style.css">
+    <audio autoplay loop>
+        <source src="/audio/floppy.mp3" type="audio/mpeg">
+    </audio>
 </head>
 
 <body>
